# mink

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  models.py  ocr.py  pyproject.toml  transcription.py
config/: config.yaml
config/api/: example.yaml
config/cast/: anthropic.yaml
config/db/: cloudsql.yaml  localconn.yaml
mink/: cli.py  db.py  llmcast.py  main.py  models.py  ocr.py  transcription.py
terraform/: db.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
