[project]
name = "mink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.128.0",
    "faster-whisper>=1.2.1",
    "hydra-core>=1.3.2",
    "pyyaml>=6.0.3",
    "scenedetect[opencv]>=0.6.7.1",
    "torch>=2.10.0",
]
