[project]
name = "mink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.128.0",
    "faster-whisper>=1.2.1",
    "hydra-core>=1.3.2",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.13.0.90",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "scenedetect[opencv]>=0.6.7.1",
    "torch>=2.10.0",
    "sqlmodel>=0.0.31",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.11",
    "anthropic>=0.76.0",
    "rich>=14.2.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]
